--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ wasm-bindgen-futures = "0.4.34"
 console_error_panic_hook = "0.1.7"
 serde = { version = "1.0", features = ["derive"] }
 serde-wasm-bindgen = "0.4"
+once_cell = "1.17.1"
 
 [dependencies.web-sys]
 version = "0.3.61"
@@ -34,5 +35,6 @@ features = [
   "Worker",
   "MessageEvent",
   "DedicatedWorkerGlobalScope",
-  "Storage"
+  "Storage",
+  "Performance"
 ]
